--- a/Trabalho1Semestre/main.css
+++ b/Trabalho1Semestre/main.css
@@ -1,188 +1,124 @@
+@charset "UTF-8";
+
 body {
-  background-color: #ebedef;
-}
-
-h1 {
-  color: #900c3f;
-  font-style: Georgia, serif;
-}
-
-h2 {
-  color: #ffd523;
-}
-
-p {
-  font-size: larger;
-}
-
-.tab {
-  position: relative;
-  top: 50px;
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #c5c3c6;
-}
-
-/* Style the buttons that are used to open the tab content */
-.tab button {
-  font-weight: bold;
-  background-color: #c5c3c6;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.tab button:hover {
-  background-color: #ccc;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #a4a0a6;
-}
-
-/* Style the tab content */
-.tabcontent {
-  position: relative;
-  top: 50px;
-  display: none;
-  padding: 6px 12px;
-  border-top: none;
-}
-
-#navbar {
-  background-color: #333;
-  /* Black background color */
-  position: fixed;
-  /* Make it stick/fixed */
-  top: 0;
-  /* Stay on top */
-  width: 100%;
-  /* Full width */
-  -webkit-transition: top 0.3s;
-  transition: top 0.3s;
-  /* Transition effect when sliding down (and up) */
-}
-
-/* Style the navbar links */
-#navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 15px;
-  text-decoration: none;
-}
-
-#navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
- 
-@media screen and (max-width: 525px) {
-  .tab {
-    float: left;
-    width: 30%;
-    height: 300px;
+    background-color: #ebedef;
+    margin: 0;
+    padding: 0;
+    border: 0;
   }
-  /* Style the buttons that are used to open the tab content */
-  .tab button {
+  
+  h1 {
+    color: #900c3f;
+    font-style: Georgia, serif;
+  }
+  
+  h2 {
+    color: #fcd148;
+  }
+  
+  p {
+    font-size: larger;
+  }
+  
+
+  /*Menu geral*/
+  
+  /*  nav  menu  */
+  nav{
+      background-color: #856b7e;
+      opacity: 0.7;
+  }
+  
+/* Menu */
+  .menu li {
+    /*padding: 7px 10px;*/
+    list-style-type: none;
+  }
+
+  .menu li a{
+    font-weight: bold;
+    float: left;
     display: block;
+    color: #fdfd96;
+    text-align: center;
+    padding: 15px;
+    text-decoration: none;
+  }
+
+  .menu li:hover{
     color: black;
-    padding: 22px 16px;
-    width: 100%;
+    background-color:#a18a9b;
+    cursor: pointer;
+  }
+     
+.menu:not(.grid) {
+  display: flex;
+}
+     
+.menu.grid{
+display: grid;
+grid-template-columns: auto auto auto auto auto 1fr;
+}
+.menu ul{
+display: grid;
+}
+
+.label{
+display: none;
+font-size: 22px;
+padding-left: 5px;
+}
+
+#toggle{
+display: none;
+}
+
+@media all and (max-width : 575px) {
+  body{
+    font-size: 90%;
+  }
+
+  .menu:not(.grid){
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .menu.grid{
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .menu>*:last-child{
+    margin-left: 0;
+  }
+
+  .sandwich label{
+    display: block;
+  }
+
+  .sandwich .menu{
+    display: none;
+  }
+
+  .sandwich .menu{
+    margin: -30px 0px 0px 30px;
     text-align: left;
   }
-  /* Style the tab content */
-  .tabcontent {
-    float: right;
-    padding: 0px 12px;
-    width: 60%;
-    border-left: none;
-    height: 300px;
+
+  .sandwich #toggle:checked + .menu:not(.grid) {
+    display: flex;
+  }
+
+  .sandwich #toggle:checked + .menu.grid {
+    display: grid;
   }
 }
-/*O que fazemos*/
-#consul{
-  top:100px;
-  position: relative;
-}
+  
+.login { 
+  bottom:40px;
+  float: right;
+  display: flex;
+  text-decoration: none;
+  color: #fdfd96;
  
-/* Slideshow*/
-.slideshow{
-  width: 700px;
-  height:400px;
-  overflow: hidden;}
-  .middle{
-  position:relative;
-  top:300px;
-  left:50%;
-  transform: translate(-50%,-50%);
 }
-
-.navigation{
-  position:absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  display:flex;
-
-}
-
-.bar{
-  width: 50px;
-  height:10px;
-  border: 2px solid black;
-  margin:6px;
-  cursor: pointer;
-  transition: 0.4s;
-}
-.bar:hover{
-  background:#900c3f;
-}
-
-input[name="r"] {
-  position:absolute;
-  visibility: hidden;
-}
-
-.slides{
-  width: 500%;
-  height: 100%;
-   display: flex;
-}
-.slide{
-  width: 20%;
-  transition: 0.6s;
-}
-
-.slide img{
-  width: 100%;
-  height: 100%;
-}
-
-#r1:checked ~ .s1{
-  margin-left:0;
-}
-
-#r2:checked ~ .s1{
-  margin-left:-20%;
-}
-
-#r3:checked ~ .s1{
-  margin-left:-40%;
-}
-
-#r4:checked ~ .s1{
-  margin-left:-60%;
-}
-
-#r5:checked ~ .s1{
-  margin-left:-80%;
-}
-
-/*# sourceMappingURL=main.css.map */
